# pjc-project

./: .gitignore  CMakeLists.txt  countLines.mjs  main.cpp  sources.txt
Engine/BackgroundSource/: BackgroundSource.h
Engine/Camera/: Camera.cpp  Camera.h
Engine/CompositeParent/: CompositeParent.cpp  CompositeParent.h
Engine/Context/: Context.cpp  Context.h
Engine/EntityModule/: EntityModule.cpp  EntityModule.h
Engine/EventEmitter/: EventEmitter.cpp  EventEmitter.h
Engine/GameStateController/: GameStateController.cpp  GameStateController.h
Engine/Group/: Group.cpp  Group.h
Engine/MortalEntityModule/: MortalEntityModule.cpp  MortalEntityModule.h
Engine/Object/: Object.cpp  Object.h
Engine/PhysicalObject/: PhysicalObject.cpp  PhysicalObject.h  PhysicsModule.cpp  PhysicsModule.h
Engine/PhysicsEngine/: PhysicsEngine.cpp  PhysicsEngine.h
Engine/Rect/: Rect.cpp  Rect.h
Engine/Renderer/: Renderer.cpp  Renderer.h
Engine/Savable/: Savable.cpp  Savable.h
Engine/Scene/: Scene.cpp  Scene.h
Engine/StateStore/: StateStore.cpp  StateStore.h
Engine/TextDisplay/: TextDisplay.cpp  TextDisplay.h
Engine/TextureLoader/: TextureLoader.h
Engine/TextureSwitcher/: TextureSwitcher.cpp  TextureSwitcher.h
Engine/TexturedRect/: TexturedRect.cpp  TexturedRect.h
Engine/VecUtils/: VecUtils.cpp  VecUtils.h
Game/AbilityPickup/: AbilityPickup.cpp  AbilityPickup.h
Game/BackgroundShader/: BackgroundShader.cpp  BackgroundShader.h
Game/BallEnemy/: BallEnemy.cpp  BallEnemy.h
Game/Button/: Button.cpp  Button.h
Game/Fly/: Fly.cpp  Fly.h
Game/GameManager/: GameManager.cpp  GameManager.h
Game/Ground/: Ground.cpp  Ground.h
Game/GroundPlatformSmall/: GroundPlatformSmall.cpp  GroundPlatformSmall.h
Game/InitContext/: InitContext.cpp  InitContext.h
Game/MovingPlatform/: MovingPlatform.cpp  MovingPlatform.h
Game/ObjectType/: ObjectType.cpp  ObjectType.h
Game/Player/: Player.cpp  Player.h
Game/Projectile/: Projectile.cpp  Projectile.h
Game/SceneInitializer/: SceneInitializer.cpp  SceneInitializer.h
Game/SpikeBallObstacle/: SpikeBallObstacle.cpp  SpikeBallObstacle.h
Game/SpikedGround/: SpikedGround.cpp  SpikedGround.h
Game/Splash/: Splash.cpp  Splash.h
Game/SplashShader/: SplashShader.cpp  SplashShader.h
Game/States/: States.cpp  States.h
Game/TextField/: TextField.cpp  TextField.h
Game/Tree/: Tree.cpp  Tree.h
assets/: Bez nazwy.xcf  ability.xcf  backlight.xcf  enemy_ball.xcf  flying_entity.xcf  grass.xcf  ground_small_platform.xcf  spikes.xcf  title.xcf  tree.xcf
shaders/: background.fsh  background.vsh  paper.frag  paper.vert  splash.frag  splash.vert
